--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,7 @@ contourpy==1.2.0
 cv==1.0.0
 cycler==0.12.1
 cymem==2.0.8
-en-core-web-sm==3.7.1
+en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl
 filelock==3.13.1
 fonttools==4.45.1
 fsspec==2023.10.0
